# Ai-model

./: .dockerignore  .env.example  .gitignore  CCLA.md  CHANGELOG.md  CLA-SIGNATORIES.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  NOTICE  README.md  SECURITY.md  build_wheels.py  conftest.py  corvinOS_path_fix.pth  hatch_build.py  install.ps1  install.sh  ollama-manifest.yaml  pyproject.toml  render.yaml
.claude-plugin/: marketplace.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-image.yml  compliance-check.yml  coverage.yml  e2e-nightly.yml  installer-test.yml  publish.yml  sync-installers.yml  test.yml  voice-e2e.yml
.ldd/: .gitignore
.well-known/: agentic-verify.txt
compliance/: CHANGELOG.md  ci_review.py  eu-ai-act.yaml  gdpr.yaml  iso-42001.yaml  manifest.sig  nist-ai-rmf.yaml  sign.sh
core/awpkg/: awpkg.py  plugin.json
core/compliance/: README.md  bootstrap.sh  requirements.txt
core/compute/: LICENSE  README.md  bootstrap.sh  requirements-minimal.txt  requirements.txt
core/console/: .gitignore  DEVELOPMENT.md  README.md  bootstrap.sh  dev.sh  install-systemd.sh  requirements.txt
core/gateway/: .gitignore  Dockerfile  bootstrap.sh  pyproject.toml  requirements.txt
core/init/: init.py  test_daemon.py  test_init.py
core/license/: .gitignore  bootstrap.sh  requirements.txt
core/pipe/: mcp_server.py  plugin.json  test_mcp_server.py
corvinOS/: __main__.py  _win_path_fix.py
corvinOS/installer/: __init__.py  __main__.py  bridge_manager.py  core.py  ollama.py  service_manager.py  system_service_manager.py
corvinOS/shared/: paths.py
docs/: DOCKER.md  INSTALL-UNIVERSAL.md  OLLAMA-RELEASE.md  README.md  a2a-social-fabric.md  agent-behavior.md  agent-communication.md  architecture.md  audit-and-compliance.md  awpkg.md  bridge-setup.md  browser-automation.md  browser-voice-guided-navigation.md  compute.md  console.md  data-and-compute.md  data-flow.md  docker-headless-setup.md  docker-setup-guide.md  docker-setup-with-web-ui.md  docker-troubleshooting.md  engine-layer.md  extending.md  first-run-language-and-voice-onboarding.md  for-companies.md  for-organizations.md  forge.md  image-generation-zero-config.md  layer-model.md  memory-model.md  memory.md  os-analogy.md  overview.md  personas-and-routing.md  plugin-system.md  rights-and-teamwork.md  runtime-generation.md  security.md  setup.md  skill-format.md  (+5 more)
docs/claude-ref/: adapter-runtime.md  adr-gate.md  background-completion-notify.md  compliance-baseline.md  hermes-healing.md  imagegen-mcp.md  layer-10-path-gate.md  layer-22-task-engine-m2.md  layer-33-artifacts.md  layer-34-data-classification.md  layer-35-egress-lockdown.md  layer-36-erasure.md  layer-37-audit-at-rest.md  layer-38-a2a-network.md  layer-44-house-rules.md  layer-cls.md  layer-data.md  layer-engines.md  layer-extension-api.md  layer-integrity-protocol.md  layer-plugins.md  layer-security.md  layer-summary.md  layer-users.md  layer-voice-ldd.md  ldd-mandatory.md  quality-discipline.md  rebrand.md  self-test.md  testing-and-docs.md  tests.md  voice-audio-handling.md
docs/compliance/: COMPLIANCE-REPORT-GUIDE.md  DPIA-TEMPLATE.md  DSB-CHECKLIST.md  EU-AI-ACT-COMPLIANCE-VALIDATION.md  INCIDENT-RESPONSE-PLAN.md  OPERATOR-OBLIGATIONS.md  PENTEST-SCOPE.md  PRIVACY-NOTICE-EXAMPLE.md  PRIVACY-NOTICE-TEMPLATE.md  README.md  RISK-CLASSIFICATION.md
docs/concepts/: session-participation-gate.md
docs/eu-ai-act/: DECLARATION-OF-CONFORMITY.md  README.md  agentic-safeguards.md  architecture.md  article-14.md  article-28-30.md  article-5.md  article-50.md  article-73.md  article-9.md  audit-chain.md  gdpr.md  gpai-deployer-obligations.md
docs/handbook/: 01-dashboard.md  02-chat.md  03-voice-profile.md  04-messaging-channels.md  05-ai-engine.md  06-engine-control-center.md  07-api-keys.md  09-personas.md  10-people.md  11-files.md  12-rag-providers.md  13-rag-hub.md  14-create-provider.md  15-workflows.md  16-forge.md  17-skills.md  18-connectors.md  19-agent-hub.md  20-space.md  21-data-sources.md  README.md
docs/issues/: README.md  WATCHDOG-UNINSTALL-REVIEW.md  _template.md
docs/observability/: README.md
operator/agent/: __init__.py  audit.py  (+6 more)
ops/: .dockerignore  .env.example  .env.local-test.template  .env.template  Caddyfile.template  Dockerfile  README.md  docker-compose.local-test.yml  docker-compose.yml  docker-quick-start.sh  entrypoint.sh  healthcheck.sh  supervisord.conf
ops/launcher/: README.md  a2a_entry.py  corvin_id_entry.py  flow_entry.py  instance_id_entry.py  layer_entry.py  license_debug_entry.py  maintainer_entry.py  pyproject.toml  service_entry.py  voice_entry.py  wdat_report_entry.py
ops/launcher/corvin/: __init__.py  __main__.py  _autoupdate_entrypoint.py  backend.py  cli.py  config.py  docker_backend.py  native_backend.py  ollama.py  serve_backend.py  serve_entry.py
ops/launcher/tests/: test_autoupdate_uv.py  test_telemetry_config.py
scripts/: analyze_coverage_gaps.py  demo_large_topology.py  demo_spotify_pipeline.py  e2e_adr0118_fixture.py  e2e_full_audit_fixture.py  run_spotify_workflow_demo.py  start-e2e-stack.sh
site/: index.html
skills_basis/: README.md
tests/: e2e_task_engine.py  test_adr_0126_claude_local.py  test_cross_platform_paths.py  test_hatch_build_vendor_ignore.py  test_install_sh_execution.py  test_installer_bridges_config.py  test_installer_claude_login.py  test_installer_console.py  test_installer_dependencies.py  test_installer_health_probe.py  test_installer_integration.py  test_installer_keys_permissions.py  test_installer_piper.py  test_installer_platform.py  test_installer_robust_rmtree.py  test_installer_stt.py  test_openrouter_ollama_keys.py  test_secrets_ssot.py  test_service_manager.py  test_session_pinning_e2e.py  test_stt_corrupt_model_heal.py  test_stt_model_tiers.py  test_stt_nonspeech_markers.py  test_stt_offline_fallback.py  test_system_service_manager.py  test_task_engine_m2_e2e.py  test_uninstall_resets_onboarding.py  test_uninstall_windows_autostart.py  test_voice_config_ssot.py  test_windows_supervisor_parity.py
(+1791 files in other folders)
